--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SheCodes</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" /    <title>Weather Forecast</title>
 </head>
 
 <body>
-
+<footer>
+Coded by 
+<a href="https://github.com/Cecilia10d/" target="_blank"> Cecilia Mutisya</a> hosted by 
+<a href="https://github.com/Cecilia10d/My-Weather-Forecast">Github</a> and website 
+<a href="https://weather-forecast-today-app.netlify.app/">on netlify</a></footer>
 </body>
-
-</html>
