--- a/index.html
+++ b/index.html
@@ -12,5 +12,5 @@
 Coded by 
 <a href="https://github.com/Cecilia10d/" target="_blank"> Cecilia Mutisya</a> hosted by 
 <a href="https://github.com/Cecilia10d/My-Weather-Forecast">Github</a> and website 
-<a href="https://weather-forecast-today-app.netlify.app/">on netlify</a></footer>
+<a href=""https://weather-forecast-today-app.netlify.app/">on netlify</a></footer>
 </body>
