--- a/index.html
+++ b/index.html
@@ -8,9 +8,29 @@
 </head>
 
 <body>
+    <header>
+        <form>
+            <input type="search" placeholder="Enter a city.." required />
+            <input type="submit" value="Search" />
+        </form>
+    </header>
+    <main>
+        <div>
+            <h1>Paris</h1>
+            <p>
+                Tuesday 14:49, scattered clouds
+                <br />
+                Humidity: 66%, Wind: 3.13km/h
+            </p>
+        </div>
+        <div>🌤️ 12°C</div>
+    </main>
+
 <footer>
 Coded by 
-<a href="https://github.com/Cecilia10d/" target="_blank"> Cecilia Mutisya</a> hosted by 
-<a href="https://github.com/Cecilia10d/My-Weather-Forecast">Github</a> and website 
-<a href=""https://weather-forecast-today-app.netlify.app/">on netlify</a></footer>
+<a href="https://github.com/Cecilia10d/" target="_blank"> Cecilia Mutisya</a>, is 
+<a href="https://github.com/Cecilia10d/My-Weather-Forecast"target="_blank">open-sourced on GitHub</a> and 
+<a href=""https://weather-forecast-today-app.netlify.app/"target="_blank">hosted on netlify</a>
+</footer>
 </body>
+</html>
