--- a/index.html
+++ b/index.html
@@ -4,26 +4,42 @@
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" /    <title>Weather Forecast</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet" />
+     <title>Weather Forecast</title>
+<link rel="stylesheet" href="src/style.css" />
 </head>
-
 <body>
+<div class="weather-app">
+
     <header>
         <form>
-            <input type="search" placeholder="Enter a city.." required />
-            <input type="submit" value="Search" />
+            <input type="search" placeholder="Enter a city.." required 
+            class="search-form-input"
+            />
+            <input type="submit" value="Search" class="search-form-button"/>
         </form>
     </header>
     <main>
+        <div class="weather-app-data">
         <div>
-            <h1>Paris</h1>
-            <p>
+            <h1 class="weather-app-city">Paris</h1>
+            <p class="weather-app-details">
                 Tuesday 14:49, scattered clouds
                 <br />
-                Humidity: 66%, Wind: 3.13km/h
+                Humidity: <span>66%</span>, Wind: <span>3.13km/h</span>
             </p>
         </div>
-        <div>🌤️ 12°C</div>
+        <div class="weather-app-temparature-container">
+            <div class="weather-app-icon">🌤️</div>
+        <div class="weather-app-temparature">12</div>
+           <div class="weather-app-unit">°C</div>
+        </div>
+        </div>
     </main>
 
 <footer>
