--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <p class="weather-app-details">
                 Tuesday 14:49, scattered clouds
                 <br />
-                Humidity: <span>66%</span>, Wind: <span>3.13km/h</span>
+                Humidity: <strong>66%</strong>, Wind: <strong>3.13km/h</strong>
             </p>
         </div>
         <div class="weather-app-temparature-container">
