--- a/index.html
+++ b/index.html
@@ -10,24 +10,27 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet" />
-     <title>Weather Forecast</title>
+     <title>Weather Forecast App</title>
 <link rel="stylesheet" href="src/style.css" />
 </head>
 <body>
 <div class="weather-app">
 
     <header>
-        <form>
+       
+    <form class="search-form" id="search-form">
             <input type="search" placeholder="Enter a city.." required 
-            class="search-form-input"
+          id="search-form-input"
+          class="search-form-input"
             />
-            <input type="submit" value="Search" class="search-form-button"/>
+            <input type="submit" value="Search"
+             class="search-form-button"/>
         </form>
     </header>
     <main>
         <div class="weather-app-data">
         <div>
-            <h1 class="weather-app-city">Paris</h1>
+            <h1 class="weather-app-city" id="city">Paris</h1>
             <p class="weather-app-details">
                 Tuesday 14:49, scattered clouds
                 <br />
@@ -41,12 +44,14 @@
         </div>
         </div>
     </main>
-
-<footer>
-Coded by 
+ 
+    <footer>
+This project was coded by 
 <a href="https://github.com/Cecilia10d/" target="_blank"> Cecilia Mutisya</a>, is 
 <a href="https://github.com/Cecilia10d/My-Weather-Forecast"target="_blank">open-sourced on GitHub</a> and 
-<a href=""https://weather-forecast-today-app.netlify.app/"target="_blank">hosted on netlify</a>
+<a href="https://weather-forecast-today-app.netlify.app/"target="_blank">hosted on netlify</a>
 </footer>
+</div>
+ <script src="src/index.js"></script>
 </body>
 </html>
