--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         rel="stylesheet" />
      <title>Weather Forecast App</title>
 <link rel="stylesheet" href="src/style.css" />
+<script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
 </head>
 <body>
 <div class="weather-app">
