--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet" />
-     <title>Weather Forecast App</title>
+
 <link rel="stylesheet" href="src/style.css" />
 <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
+
+<title>Weather Forecast App</title>
 </head>
 <body>
 <div class="weather-app">
@@ -31,7 +33,7 @@
     <main>
         <div class="weather-app-data">
         <div>
-            <h1 class="weather-app-city" id="city">Paris</h1>
+            <h1 class="weather-app-city" id="city"></h1>
             <p class="weather-app-details">
                 Tuesday 14:49, scattered clouds
                 <br />
@@ -40,7 +42,7 @@
         </div>
         <div class="weather-app-temparature-container">
             <div class="weather-app-icon">🌤️</div>
-        <div class="weather-app-temparature">12</div>
+        <div class="weather-app-temparature" id="temparature"></div>
            <div class="weather-app-unit">°C</div>
         </div>
         </div>
