--- a/index.html
+++ b/index.html
@@ -40,9 +40,11 @@
                 Humidity: <strong>66%</strong>, Wind: <strong>3.13km/h</strong>
             </p>
         </div>
-        <div class="weather-app-temparature-container">
+        <div class="weather-app-temperature-container">
             <div class="weather-app-icon">🌤️</div>
-        <div class="weather-app-temparature" id="temparature"></div>
+<div class="weather-app-temperature" id="temperature">
+
+</div>
            <div class="weather-app-unit">°C</div>
         </div>
         </div>
