--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
             </p>
         </div>
         <div class="weather-app-temperature-container">
-            <div class="weather-app-icon">🌤️</div>
+            <img 
+               src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/few-clouds-day.png",
+               class="weather-app-icon"/>
+              
 <div class="weather-app-temperature" id="temperature">
 
 </div>
