--- a/index.html
+++ b/index.html
@@ -37,17 +37,14 @@
             <p class="weather-app-details">
             <span id="time"></span>, <span id="description"></span> 
                 <br />
-                Humidity: <strong id="humidity"></strong>, Wind: <strong id="wind-speed"></strong>
+                Humidity: <strong id="humidity"></strong>, 
+                Wind: <strong id="wind-speed"></strong>
             </p>
         </div>
         <div class="weather-app-temperature-container">
-            <img 
-               src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/few-clouds-day.png",
-               class="weather-app-icon"/>
-              
-<div class="weather-app-temperature" id="temperature">
-
-</div>
+            <div id="icon"></div>
+          
+<div class="weather-app-temperature" id="temperature"></div>
            <div class="weather-app-unit">°C</div>
         </div>
         </div>
