--- a/index.html
+++ b/index.html
@@ -31,26 +31,27 @@
         </form>
     </header>
     <main>
+
         <div class="weather-app-data">
-        <div>
-            <h1 class="weather-app-city" id="city"></h1>
-            <p class="weather-app-details">
-            <span id="time"></span>, <span id="description"></span> 
-                <br />
-                Humidity: <strong id="humidity"></strong>, 
-                Wind: <strong id="wind-speed"></strong>
-            </p>
+            <div>
+                <h1 class="weather-app-city" id="city"></h1>
+                <p class="weather-app-details">
+                    <span id="time"></span>,
+                    <span id="description"></span>
+                    <br />
+                    Humidity: <strong id="humidity"></strong>, Wind:
+                    <strong id="wind-speed"></strong>
+                </p>
+            </div>
+            <div class="weather-app-temperature-container">
+                <div id="icon"></div>
+                <div class="weather-app-temperature" id="temperature"></div>
+                <div class="weather-app-unit">°C</div>
+            </div>
         </div>
-        <div class="weather-app-temperature-container">
-            <div id="icon"></div>
-          
-<div class="weather-app-temperature" id="temperature"></div>
-           <div class="weather-app-unit">°C</div>
-        </div>
-        </div>
-    </main>
- 
-    <footer>
+        <div class="weather-forecast" id="forecast"></div>
+        </main>
+        <footer>
 This project was coded by 
 <a href="https://github.com/Cecilia10d/" target="_blank"> Cecilia Mutisya</a>, is 
 <a href="https://github.com/Cecilia10d/My-Weather-Forecast"target="_blank">open-sourced on GitHub</a> and 
